small width media query to avoid overlap

--- a/Login/wwwroot/css/site.css
+++ b/Login/wwwroot/css/site.css
@@ -23,6 +23,17 @@ header{
     left: 17px;
     top: 8px;
 }
+@media only screen and (max-width:870px){
+    .input-group{
+        display:none;
+    }
+    .login-details{
+        position: absolute;
+        left:80px;
+        top:2px;
+    }
+}
+
 
 .input-group{
     max-width:500px;
